--- a/src/app/components/header/header.component.css
+++ b/src/app/components/header/header.component.css
@@ -1,7 +1,3 @@
-header {
-  margin-top: 1rem;
-  height: 80px;
-}
 .logo {
   width: 50%;
   margin: 1rem;
@@ -78,6 +74,15 @@ header {
   }
   .btns {
     margin: 0;
-    
+  }
+}
+@media only screen and (min-width: 768px) {
+  header {
+    height: 80px;
+    position: fixed;
+    background-color: white;
+    z-index: 1;
+    width: -webkit-fill-available;
+    inset-block-start: 0rem;
   }
 }
