--- a/src/app/components/map/map.component.css
+++ b/src/app/components/map/map.component.css
@@ -1,6 +1,7 @@
 main {
   margin-top: -3%;
 }
+
 #map {
   width: 100%;
   height: 850px;
@@ -16,7 +17,7 @@ main {
 .filters-box {
   position: absolute;
   left: 2%;
-  top: 2%;
+  top: 8%;
   z-index: 1;
   margin: 0.5em;
 }
@@ -48,7 +49,7 @@ main {
   margin-bottom: 0.5em;
 }
 .show-list-btn {
-  position: absolute;
+  position: relative;
   top: 30%;
   z-index: 20;
 }
@@ -73,7 +74,7 @@ main {
 }
 
 .show-list-btn {
-  position: absolute;
+  position: sticky;
   top: 30%;
   z-index: 20;
 }
@@ -81,5 +82,19 @@ main {
 @media only screen and (max-width: 375px) {
   #map {
     height: 550px;
+  }
+}
+@media only screen and (min-width: 768px) {
+  .filters-box {
+    position: sticky;
+    left: 2%;
+    top: 18%;
+    z-index: 1;
+    margin: 0.5em;
+  }
+  .show-list-btn {
+    position: sticky;
+    top: 30%;
+    z-index: 20;
   }
 }
